k8s-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleserver-deployment
  labels:
    app: simpleserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simpleserver
  template:
    metadata:
      labels:
        app: simpleserver
    spec:
      containers:
      - name: simpleserver
        image: simpleserver
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
