k8s-deploy/nodeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  selector:
    app: nodeservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
