k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleserver-service
  labels:
    app: simpleserver
spec:
  selector:
    app: simpleserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
